batfish.dockerfile: upgrade to java11 (#69)